--- a/elasticsearch_demo/pom.xml
+++ b/elasticsearch_demo/pom.xml
@@ -11,7 +11,7 @@
     <groupId>com.sofency</groupId>
     <artifactId>elasticsearch_demo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>elasticsearch_demo</name>
+    <name>elasticsearchDemo</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
@@ -26,8 +26,23 @@
             <version>1.2.46</version>
         </dependency>
         <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.37</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.11.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.11.2</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
